--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Simple Webpage</h1>
     </header>
     <main>
-        <img>
+        <img src="IMG_1740.JPG" alt="image of cute grey cat">
 
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis incidunt velit, voluptatem commodi nostrum autem! Inventore blanditiis aliquid rerum, tenetur, repudiandae in debitis consequuntur autem expedita facilis labore, enim sapiente.</h2>
 
