added link to my study guide and a couple other changes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h1>Simple Webpage</h1>
     </header>
     <main>
-        <img src="IMG_1740.JPG" alt="image of cute grey cat">
+        <img src="IMG_1740.JPG" alt="image of Nimbus, a cute grey cat">
 
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis incidunt velit, voluptatem commodi nostrum autem! Inventore blanditiis aliquid rerum, tenetur, repudiandae in debitis consequuntur autem expedita facilis labore, enim sapiente.</h2>
+        <h2>Nimbus is the most friendly cat you'll ever meet!</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta magnam nobis nesciunt tempore aliquam porro ipsum pariatur quia iure exercitationem tenetur molestiae sint maiores facere, neque odit laboriosam distinctio fugiat.</p>
+        <p>Check out this <a href="https://npokrandt.github.io/prework-study-guide/" target="_blank">study guide</a></p>
     </main>
 
     <footer>
